--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
 
   "dependencies": {
-    "coffee-script": "~1.6"
+    "coffee-script": "~1.6",
+    "underscore": "~1.3.3"
   },
 
   "devDependencies": {
